--- a/index.html
+++ b/index.html
@@ -80,13 +80,17 @@
     <img src="/images/slider2.jpg" class="sliderImages">
     <img src="/images/slider3.jpg" class="sliderImages">
     <img src="/images/slider4.jpg" class="sliderImages">
+    <img src="/images/slider5.jpg" class="sliderImages">
+    <img src="/images/slider6.jpg" class="sliderImages">
+    <img src="/images/slider7.jpg" class="sliderImages">
+
   </div>
   </div>
-  <div class="mobileBackImg"></div>
-  <div class="headertext">
-    <!-- <h1 >Dariya Kirilenko</h1>
-    <p>It's all about me</p> -->
-  </div>
+  <!-- <div class="mobileBackImg"></div> -->
+</div>
+<div class="main_header-main">
+  <h1 > Dariya Kirilenko</h1>
+  <h3 > It's all about me</h3>
 </div>
 
 </header>
@@ -146,14 +150,14 @@
     </div>  -->
   <h2>Мои Работы</h2>
   <div class="main_service">
-    <a href="" target="_blank" ><div class="service service1"></div></a> 
-    <a href="" target="_blank" ><div class="service service2"></div></a> 
-    <a href="" target="_blank" ><div class="service service3"></div></a> 
-    <a href="" target="_blank" ><div class="service service4"></div></a> 
-    <a href="" target="_blank" ><div class="service service5"></div></a> 
-    <a href="" target="_blank" ><div class="service service6"></div></a> 
-    <a href="" target="_blank" ><div class="service service7"></div></a> 
-    <a href="" target="_blank" ><div class="service service8"></div></a> 
+    <a href="/service-family.html" target="_blank" ><div class="service service1"></div></a> 
+    <a href="/service-wedding.html" target="_blank" ><div class="service service2"></div></a> 
+    <a href="/service-newyear.html" target="_blank" ><div class="service service3"></div></a> 
+    <a href="/service-wedding.html" target="_blank" ><div class="service service4"></div></a> 
+    <a href="/service-wedding.html" target="_blank" ><div class="service service5"></div></a> 
+    <a href="/service-love.html" target="_blank" ><div class="service service6"></div></a> 
+    <a href="/service-family.html" target="_blank" ><div class="service service7"></div></a> 
+    <a href="/service-love.html" target="_blank" ><div class="service service8"></div></a> 
      
 
      
