--- a/service-family.html
+++ b/service-family.html
@@ -33,7 +33,7 @@
               <ul>
                 <li><a href="/service-newyear.html">Новогодняя фотосессия</a></li>
                 <li><a href="/service-wedding.html">Свадебная фотосессия</a></li> 
-                <!-- <!-- <li><a href="#">Семейная фотосессия</a></li> --> -->
+                <!-- <li><a href="#">Семейная фотосессия</a></li> --> 
                 <li><a href="/service-love.html">Love story фотосессия</a></li> 
                 <li><a href="/service-master.html">Мастер класс</a></li> 
             
