--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
     <div class="btnRight"></div>
     <div class="info"></div>
     <div class="hidden images">
-    <img src="/images/slider0.jpg" class="sliderImages">
+    <!-- <img src="/images/slider0.jpg" class="sliderImages">
     <img src="/images/slider1.jpg " class="sliderImages"> 
     <img src="/images/slider2.jpg" class="sliderImages">
     <img src="/images/slider3.jpg" class="sliderImages">
     <img src="/images/slider4.jpg" class="sliderImages">
     <img src="/images/slider5.jpg" class="sliderImages">
     <img src="/images/slider6.jpg" class="sliderImages">
-    <img src="/images/slider7.jpg" class="sliderImages">
+    <img src="/images/slider7.jpg" class="sliderImages"> -->
 
   </div>
   </div>
@@ -103,7 +103,7 @@
     <h4>Эмоциональные и живые фотографии премиум уровня</h4>
     <div class="aboutMe">
        
-      <div class="myphoto"><img src="/images/KirilenkoDaria.jpg" alt=""></div>
+      <div class="myphoto"></div>
       <div class="listOfSkills">
         <p>Здравствуйте! Меня зовут Дария Кириленко, я — профессиональный фотограф, Киев — мой родной город, в котором я живу и занимаюсь любимым делом. Фотография — не только правильно выставленный свет и цвет, удачно составленная композиция или подобранная поза. Это истинное произведение искусства, рождающее единое целое. То, что непроизвольно заставляет возвращаться к снимку снова и снова, смотреть на него и постоянно находить что-то новое, очень личное. Если мои фото, заставляют чувствовать и заново переживать, задевают невидимые струны души, значит, моя работа была проделана не зря и я действительно — профессиональный фотограф.</p>
         <p>  Я, как профессиональный фотограф в Киеве, способна создать высокохудожественные творческие фотографии, которые оставят неизгладимые впечатления в памяти зрителей и действующих лиц. Меняя геометрию рисунка, стилистическую обработку снимков, подбирая необычные сюжеты, можно прочно связать между собой мир фото и живописи.</p>
