All blocks exept blog

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Портфолио</title>
     <link rel="stylesheet" href="/styles/main.css">
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
@@ -18,7 +19,7 @@
       <span class="third"></span>
     </div>
     <div class="logo">
-      <a href="index.html">Dariya Kirilenko</a>
+      <a href="/index.html">Dariya Kirilenko</a>
     </div>  
     <nav>
       <p id="error1">Для поиска вы должны ввести три или более символов</p>
@@ -32,11 +33,11 @@
         <li class="dropdown">
           <a href="service.html" target="_self">Услуги</a>
           <ul>
-            <li><a href="/service-newyear.html">Новогодняя фотосессия</a></li>
-            <li><a href="/service-wedding.html">Свадебная фотосессия</a></li> 
-            <li><a href="/service-family.html">Семейная фотосессия</a></li>
-            <li><a href="/service-love.html">Love story фотосессия</a></li> 
-            <li><a href="/service-master.html">Мастер класс</a></li> 
+            <li><a href="service-newyear.html">Новогодняя фотосессия</a></li>
+            <li><a href="service-wedding.html">Свадебная фотосессия</a></li> 
+            <li><a href="service-family.html">Семейная фотосессия</a></li>
+            <li><a href="service-love.html">Love story фотосессия</a></li> 
+            <li><a href="service-master.html">Мастер класс</a></li> 
           </ul>
         </li>
         <li class="dropdown">
@@ -213,11 +214,11 @@
   <div class="footer-menu">
     <ul>
       <li><a href="/index.html">Главная</a></li>
-      <li><a href="/service.html">Услуги</a></li>
-      <li><a href="/price.html">Цена</a></li>
-      <li><a href="/blog.html">Блог</a></li>
-      <li><a href="/portfolio.html">Портфолио</a></li>
-      <li><a href="/contact.html"> Контакты</a></li>
+      <li><a href="service.html">Услуги</a></li>
+      <li><a href="price.html">Цена</a></li>
+      <li><a href="blog.html">Блог</a></li>
+      <li><a href="portfolio.html">Портфолио</a></li>
+      <li><a href="contact.html"> Контакты</a></li>
     </ul>
   </div>
   <div class="footer-number">
@@ -238,8 +239,8 @@
 
 <script src="/scripts/pagination1.js"></script>
 
-<script src="scripts/search.js"></script>
-<script src="scripts/main.js"></script>
+<script src="/scripts/search.js"></script>
+<script src="/scripts/main.js"></script>
 
 
 </body>
