--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Контаткты</title>
     <link rel="stylesheet" href="/styles/main.css">
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 
@@ -19,7 +20,7 @@
           <span class="third"></span>
         </div>
         <div class="logo">
-          <a href="index.html">Dariya Kirilenko</a>
+          <a href="/index.html">Dariya Kirilenko</a>
         </div>  
         <nav>
           <p id="error1">Для поиска вы должны ввести три или более символов</p>
@@ -33,11 +34,11 @@
             <li class="dropdown">
               <a href="service.html" target="_self">Услуги</a>
               <ul>
-                <li><a href="/service-newyear.html">Новогодняя фотосессия</a></li>
-                <li><a href="/service-wedding.html">Свадебная фотосессия</a></li> 
-                <li><a href="/service-family.html">Семейная фотосессия</a></li>
-                <li><a href="/service-love.html">Love story фотосессия</a></li> 
-                <li><a href="/service-master.html">Мастер класс</a></li> 
+                <li><a href="service-newyear.html">Новогодняя фотосессия</a></li>
+                <li><a href="service-wedding.html">Свадебная фотосессия</a></li> 
+                <li><a href="service-family.html">Семейная фотосессия</a></li>
+                <li><a href="service-love.html">Love story фотосессия</a></li> 
+                <li><a href="service-master.html">Мастер класс</a></li> 
             
               </ul>
             </li>
@@ -196,8 +197,7 @@
 <div id="map"></div>
 
 
-
-
+</div>
 
 
 
@@ -207,11 +207,11 @@
   <div class="footer-menu">
     <ul>
       <li><a href="/index.html">Главная</a></li>
-      <li><a href="/service.html">Услуги</a></li>
-      <li><a href="/price.html">Цена</a></li>
-      <li><a href="/blog.html">Блог</a></li>
-      <li><a href="/portfolio.html">Портфолио</a></li>
-      <li><a href="/contact.html"> Контакты</a></li>
+      <li><a href="service.html">Услуги</a></li>
+      <li><a href="price.html">Цена</a></li>
+      <li><a href="blog.html">Блог</a></li>
+      <li><a href="portfolio.html">Портфолио</a></li>
+      <li><a href="contact.html"> Контакты</a></li>
     </ul>
   </div>
   <div class="footer-number">
@@ -234,7 +234,8 @@
 <script src="/scripts/share.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBThNuuBmrPxL7rT9dQBh0d8WXh7ENh2tY&callback=initMap"async defer></script>
 
-<script src="scripts/search.js"></script>
-<script src="scripts/main.js"></script>
+<script src="/scripts/search.js"></script>
+<script src="/scripts/main.js"></script>
 </body>
+
 </html>
