--- a/pages/service-master.html
+++ b/pages/service-master.html
@@ -18,7 +18,7 @@
           <span class="third"></span>
         </div>
         <div class="logo">
-          <a href="index.html">Dariya Kirilenko</a>
+          <a href="/index.html">Dariya Kirilenko</a>
         </div>  
         <nav>
           <p id="error1">Для поиска вы должны ввести три или более символов</p>
@@ -32,10 +32,10 @@
             <li class="dropdown">
               <a href="service.html" target="_self">Услуги</a>
               <ul>
-                <li><a href="/service-newyear.html">Новогодняя фотосессия</a></li>
-                <li><a href="/service-wedding.html">Свадебная фотосессия</a></li> 
-                <li><a href="/service-family.html">Семейная фотосессия</a></li>
-                <li><a href="/service-love.html">Love story фотосессия</a></li> 
+                <li><a href="service-newyear.html">Новогодняя фотосессия</a></li>
+                <li><a href="service-wedding.html">Свадебная фотосессия</a></li> 
+                <li><a href="service-family.html">Семейная фотосессия</a></li>
+                <li><a href="service-love.html">Love story фотосессия</a></li> 
                 <!-- <li><a href="#"></a>Мастер класс</a></li>  -->
             
               </ul>
@@ -130,12 +130,12 @@
     <footer class="footer-desktop">
       <div class="footer-menu">
         <ul>
-          <li><a href="/index.html">Главная</a></li>
-          <li><a href="/service.html">Услуги</a></li>
-          <li><a href="/price.html">Цена</a></li>
-          <li><a href="/blog.html">Блог</a></li>
-          <li><a href="/portfolio.html">Портфолио</a></li>
-          <li><a href="/contact.html"> Контакты</a></li>
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="service.html">Услуги</a></li>
+          <li><a href="price.html">Цена</a></li>
+          <li><a href="blog.html">Блог</a></li>
+          <li><a href="portfolio.html">Портфолио</a></li>
+          <li><a href="contact.html"> Контакты</a></li>
         </ul>
       </div>
       <div class="footer-number">
@@ -161,8 +161,8 @@
 
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> -->
 
-<script src="scripts/main.js"></script>
-<script src="scripts/search.js"></script>
+<script src="/scripts/main.js"></script>
+<script src="/scripts/search.js"></script>
 
 
 
