--- a/pages/service-wedding.html
+++ b/pages/service-wedding.html
@@ -17,7 +17,7 @@
           <span class="third"></span>
         </div>
         <div class="logo">
-          <a href="index.html">Dariya Kirilenko</a>
+          <a href="/index.html">Dariya Kirilenko</a>
         </div>  
         <nav>
           <p id="error1">Для поиска вы должны ввести три или более символов</p>
@@ -31,11 +31,11 @@
             <li class="dropdown">
               <a href="service.html" target="_self">Услуги</a>
               <ul>
-                <li><a href="/service-newyear.html">Новогодняя фотосессия</a></li>
+                <li><a href="service-newyear.html">Новогодняя фотосессия</a></li>
                 <!-- <li><a href="/service-wedding.html">Свадебная фотосессия</a></li>  -->
                 <li><a href="service-family.html">Семейная фотосессия</a></li>
-                <li><a href="/service-love.html">Love story фотосессия</a></li> 
-                <li><a href="/service-master.html">Мастер класс</a></li> 
+                <li><a href="service-love.html">Love story фотосессия</a></li> 
+                <li><a href="service-master.html">Мастер класс</a></li> 
       
               </ul>
             </li>
@@ -156,11 +156,11 @@
   <div class="footer-menu">
     <ul>
       <li><a href="/index.html">Главная</a></li>
-      <li><a href="/service.html">Услуги</a></li>
-      <li><a href="/price.html">Цена</a></li>
-      <li><a href="/blog.html">Блог</a></li>
-      <li><a href="/portfolio.html">Портфолио</a></li>
-      <li><a href="/contact.html"> Контакты</a></li>
+      <li><a href="service.html">Услуги</a></li>
+      <li><a href="price.html">Цена</a></li>
+      <li><a href="blog.html">Блог</a></li>
+      <li><a href="portfolio.html">Портфолио</a></li>
+      <li><a href="contact.html"> Контакты</a></li>
     </ul>
   </div>
   <div class="footer-number">
@@ -183,10 +183,10 @@
 
 
 
-<script src="scripts/search.js"></script>
+<script src="/scripts/search.js"></script>
 
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> -->
 
-<script src="scripts/main.js"></script>
+<script src="/scripts/main.js"></script>
 </body>
 </html>
