--- a/pages/service.html
+++ b/pages/service.html
@@ -18,7 +18,7 @@
           <span class="third"></span>
         </div>
         <div class="logo">
-          <a href="index.html">Dariya Kirilenko</a>
+          <a href="/index.html">Dariya Kirilenko</a>
         </div>  
         <nav>
           <p id="error1">Для поиска вы должны ввести три или более символов</p>
@@ -32,11 +32,11 @@
             <li class="dropdown">
               <a href="service.html" target="_self">Услуги</a>
               <ul>
-                <li><a href="#newyear">Новогодняя фотосессия</a></li>
-                <li><a href="#wedding">Свадебная фотосессия</a></li> 
-                <li><a href="#family">Семейная фотосессия</a></li>
-                <li><a href="#love">Love story фотосессия</a></li> 
-                <li><a href="#master">Мастер класс</a></li> 
+                <li><a href="service-newyear.html">Новогодняя фотосессия</a></li>
+                <li><a href="service-wedding.html">Свадебная фотосессия</a></li> 
+                <li><a href="service-family.html">Семейная фотосессия</a></li>
+                <li><a href="service-love.html">Love story фотосессия</a></li> 
+                <li><a href="service-master.html">Мастер класс</a></li> 
 
               </ul>
             </li>
@@ -90,7 +90,7 @@
 
                 </div>
                 <div class="service-button">
-                    <a href="/service-wedding.html"> <input type="button"  value="Заказать"></a> 
+                    <a href="service-wedding.html"> <input type="button"  value="Заказать"></a> 
                 </div>
             </div>
             </div>
@@ -112,7 +112,7 @@
                         <p>Новый год — яркий, красочный, феерический праздник. Его с нетерпением ждут дети и взрослые.Не удивительно, что в памяти хочется оставить воспоминания об этом удивительном времени. Поможет в этом новогодняя фотосессия. </p>
                     </div>
                     <div class="service-button">
-                    <a href="/service-newyear.html"> <input type="button"  value="Заказать"></a> 
+                    <a href="service-newyear.html"> <input type="button"  value="Заказать"></a> 
 
                     </div>
 
@@ -132,7 +132,7 @@
                     <p>Новый год — яркий, красочный, феерический праздник. Его с нетерпением ждут дети и взрослые.Не удивительно, что в памяти хочется оставить воспоминания об этом удивительном времени. Поможет в этом новогодняя фотосессия. </p>
                 </div>
                 <div class="service-button">
-                   <a href="/service-newyear.html"> <input type="button"  value="Заказать"></a> 
+                   <a href="service-newyear.html"> <input type="button"  value="Заказать"></a> 
 
                 </div>
 
@@ -150,7 +150,7 @@
             <div class="service-describe">
                 <div class="service-header"><h1>Семья</h1></div>
                 <div class="service-price">
-                    <img src="/images/time2.png" alt="">
+                    <img src="images/time2.png" alt="">
                     <span> от 300 грн/час</span>
                 </div>
                 <div class="service-about">
@@ -159,7 +159,7 @@
                     </p>
                 </div>
                 <div class="service-button">
-                    <a href="/service-family.html"> <input type="button"  value="Заказать"></a> 
+                    <a href="service-family.html"> <input type="button"  value="Заказать"></a> 
   
                 </div>
 
@@ -182,7 +182,7 @@
                         <p>Красивую и неповторимую историю любви поможет сохранить на долгие годы креативная фотосессия лав стори в Киеве. Нет ничего прекраснее, чем взгляды по-настоящему любящих людей. Запечатлеть свои отношения, эмоции и искренние чувства им позволит фотосессия в стиле лав стори.</p>
                     </div>
                     <div class="service-button">
-                        <a href="/service-love.html"> <input type="button"  value="Заказать"></a> 
+                        <a href="service-love.html"> <input type="button"  value="Заказать"></a> 
 
                     </div>
 
@@ -202,7 +202,7 @@
                     <p>Красивую и неповторимую историю любви поможет сохранить на долгие годы креативная фотосессия лав стори в Киеве. Нет ничего прекраснее, чем взгляды по-настоящему любящих людей. Запечатлеть свои отношения, эмоции и искренние чувства им позволит фотосессия в стиле лав стори.</p>
                 </div>
                 <div class="service-button">
-                    <a href="/service-love.html"> <input type="button"  value="Заказать"></a> 
+                    <a href="service-love.html"> <input type="button"  value="Заказать"></a> 
 
                 </div>
 
@@ -229,7 +229,7 @@
                     </p>
                 </div>
                 <div class="service-button">
-                    <a href="/service-master.html"> <input type="button" value="Заказать"></a> 
+                    <a href="service-master.html"> <input type="button" value="Заказать"></a> 
   
                 </div>
 
@@ -249,11 +249,11 @@
     <div class="footer-menu">
       <ul>
         <li><a href="/index.html">Главная</a></li>
-        <li><a href="/service.html">Услуги</a></li>
-        <li><a href="/price.html">Цена</a></li>
-        <li><a href="/blog.html">Блог</a></li>
-        <li><a href="/portfolio.html">Портфолио</a></li>
-        <li><a href="/contact.html"> Контакты</a></li>
+        <li><a href="service.html">Услуги</a></li>
+        <li><a href="price.html">Цена</a></li>
+        <li><a href="blog.html">Блог</a></li>
+        <li><a href="portfolio.html">Портфолио</a></li>
+        <li><a href="contact.html"> Контакты</a></li>
       </ul>
     </div>
     <div class="footer-number">
@@ -272,10 +272,10 @@
     </div>
     </footer>
     
-<script src="scripts/search.js"></script>
+<script src="/scripts/search.js"></script>
 
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> -->
 
-<script src="scripts/main.js"></script>
+<script src="/scripts/main.js"></script>
 </body>
 </html>
