all blocks without blog with working menu

--- a/pages/service.html
+++ b/pages/service.html
@@ -32,11 +32,11 @@
             <li class="dropdown">
               <a href="service.html" target="_self">Услуги</a>
               <ul>
-                <li><a href="service-newyear.html">Новогодняя фотосессия</a></li>
-                <li><a href="service-wedding.html">Свадебная фотосессия</a></li> 
-                <li><a href="service-family.html">Семейная фотосессия</a></li>
-                <li><a href="service-love.html">Love story фотосессия</a></li> 
-                <li><a href="service-master.html">Мастер класс</a></li> 
+                <li><a href="#newyear">Новогодняя фотосессия</a></li>
+                <li><a href="#wedding">Свадебная фотосессия</a></li> 
+                <li><a href="#family">Семейная фотосессия</a></li>
+                <li><a href="#love">Love story фотосессия</a></li> 
+                <li><a href="#master">Мастер класс</a></li> 
 
               </ul>
             </li>
@@ -150,7 +150,7 @@
             <div class="service-describe">
                 <div class="service-header"><h1>Семья</h1></div>
                 <div class="service-price">
-                    <img src="images/time2.png" alt="">
+                    <img src="/images/time2.png" alt="">
                     <span> от 300 грн/час</span>
                 </div>
                 <div class="service-about">
@@ -249,11 +249,11 @@
     <div class="footer-menu">
       <ul>
         <li><a href="/index.html">Главная</a></li>
-        <li><a href="service.html">Услуги</a></li>
-        <li><a href="price.html">Цена</a></li>
-        <li><a href="blog.html">Блог</a></li>
-        <li><a href="portfolio.html">Портфолио</a></li>
-        <li><a href="contact.html"> Контакты</a></li>
+        <li><a href="/service.html">Услуги</a></li>
+        <li><a href="/price.html">Цена</a></li>
+        <li><a href="/blog.html">Блог</a></li>
+        <li><a href="/portfolio.html">Портфолио</a></li>
+        <li><a href="/contact.html"> Контакты</a></li>
       </ul>
     </div>
     <div class="footer-number">
