--- a/pages/service-love.html
+++ b/pages/service-love.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="/styles/main.css">
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
@@ -155,7 +154,7 @@
     <footer class="footer-desktop">
       <div class="footer-menu">
         <ul>
-          <li><a href="index.html">Главная</a></li>
+          <li><a href="/index.html">Главная</a></li>
           <li><a href="service.html">Услуги</a></li>
           <li><a href="price.html">Цена</a></li>
           <li><a href="blog.html">Блог</a></li>
@@ -181,10 +180,10 @@
 
 
 
-<script src="/scripts/search.js"></script>
+<script src="scripts/search.js"></script>
 
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> -->
 
-<script src="/scripts/main.js"></script>
+<script src="scripts/main.js"></script>
 </body>
 </html>
