--- a/pages/service-master.html
+++ b/pages/service-master.html
@@ -130,7 +130,7 @@
     <footer class="footer-desktop">
       <div class="footer-menu">
         <ul>
-          <li><a href="index.html">Главная</a></li>
+          <li><a href="/index.html">Главная</a></li>
           <li><a href="service.html">Услуги</a></li>
           <li><a href="price.html">Цена</a></li>
           <li><a href="blog.html">Блог</a></li>
