--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Портфолио</title>
     <link rel="stylesheet" href="/styles/main.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
 <body>  
@@ -74,7 +73,7 @@
 
 
 <h1>Последние работы</h1>
-  <ul class="pagination1"></ul>
+  <!-- <ul class="pagination1"></ul> -->
 
 <div class="imageGrid">
   <!-- <div class="tile tile1 "  >
@@ -198,7 +197,7 @@
             </div>
             </div> -->
 </div>
-<ul class="pagination2"></ul>
+<ul class="pagination1"></ul>
 </div>
 
 
@@ -224,11 +223,11 @@
     <a href="tel:+38(098)7866642" class="tel"> +38(098)786-66-42</a>
   </div>
   <div class="footer-social">
-    <div><a href="#"> <img src='/images/icon_Instagram.png'> </a> </div>
-    <div><a href="#"><img src='/images/icon_Facebook.png'></a> </div>
-    <div><a href="#"><img src='/images/icon_YouTube.png'></a> </div>
-    <div><a href="#"><img src='/images/icon_Twitt.png'></a> </div>
-    <div><a href="#"><img src='/images/icon_Linked (1).png'></a> </div>
+    <div><a href="https://www.instagram.com/andrey_tmk/" target = 'blank'> <img src='/images/icon_Instagram.png'> </a> </div>
+    <div><a  href="https://www.facebook.com/profile.php?id=100009540593812&ref=bookmarks " target="blank"><img src='/images/icon_Facebook.png'></a> </div>
+    <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png'></a> </div>
+    <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png'></a> </div>
+    <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked (1).png'></a> </div>
   
   </div>
   <div class="footer-author">
@@ -237,7 +236,6 @@
   </footer>
 
 <script src="/scripts/pagination1.js"></script>
-
 <script src="/scripts/search.js"></script>
 <script src="/scripts/main.js"></script>
 
