--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Blog</title>
     <link rel="stylesheet" href="styles/main.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
+
 
 </head>
 <body>
@@ -43,7 +44,7 @@
 
         </ul>
       </li>
-      <li class="dropdown">
+      <li class="dropdown"> 
         <a href="pages/price.html" target="_self">Цены</a>
           <ul >
             <li><a href="#">Фотосессия</a></li>
@@ -150,14 +151,14 @@
     </div>  -->
   <h2>Мои Работы</h2>
   <div class="main_service">
-    <a href="/service-family.html" target="_blank" ><div class="service service1"></div></a> 
-    <a href="/service-wedding.html" target="_blank" ><div class="service service2"></div></a> 
-    <a href="/service-newyear.html" target="_blank" ><div class="service service3"></div></a> 
-    <a href="/service-wedding.html" target="_blank" ><div class="service service4"></div></a> 
-    <a href="/service-wedding.html" target="_blank" ><div class="service service5"></div></a> 
-    <a href="/service-love.html" target="_blank" ><div class="service service6"></div></a> 
-    <a href="/service-family.html" target="_blank" ><div class="service service7"></div></a> 
-    <a href="/service-love.html" target="_blank" ><div class="service service8"></div></a> 
+    <a href ='pages/service-family.html' target="_blank" ><div class="service service1 "></div></a> 
+    <a href="pages/service-wedding.html" target="_blank" ><div class="service service2 "></div></a> 
+    <a href="pages/service-newyear.html" target="_blank" ><div class="service service3 "></div></a> 
+    <a href="pages/service-wedding.html" target="_blank" ><div class="service service4 "></div></a> 
+    <a href="pages/service-wedding.html" target="_blank" ><div class="service service5 "></div></a> 
+    <a href="pages/service-love.html" target="_blank" ><div class="service service6 "></div></a> 
+    <a href="pages/service-family.html" target="_blank" ><div class="service service7 "></div></a> 
+    <a href="pages/service-love.html" target="_blank" ><div class="service service8 "></div></a> 
      
 
      
@@ -209,11 +210,11 @@
   <a href="tel:+38(098)7866642" class="tel"> +38(098)786-66-42</a>
 </div>
 <div class="footer-social">
-  <div><a href="#"> <img src='/images/icon_Instagram.png'> </a> </div>
-  <div><a href="#"><img src='/images/icon_Facebook.png'></a> </div>
-  <div><a href="#"><img src='/images/icon_YouTube.png'></a> </div>
-  <div><a href="#"><img src='/images/icon_Twitt.png'></a> </div>
-  <div><a href="#"><img src='/images/icon_Linked (1).png'></a> </div>
+  <div><a href="https://www.instagram.com/andrey_tmk/" target = 'blank'> <img src='/images/icon_Instagram.png'> </a> </div>
+  <div><a  href="https://www.facebook.com/profile.php?id=100009540593812&ref=bookmarks " target="blank"><img src='/images/icon_Facebook.png'></a> </div>
+  <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png'></a> </div>
+  <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png'></a> </div>
+  <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked (1).png'></a> </div>
 
 </div>
 <div class="footer-author">
@@ -223,9 +224,6 @@
 
 
     <script src="scripts/search.js"></script>
-
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> -->
-
     <script src="scripts/main.js"></script>
 
 
