--- a/pages/blog.html
+++ b/pages/blog.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Блог</title>
     <link rel="stylesheet" href="/styles/main.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
 <body>
@@ -110,30 +109,17 @@
 
         <h2>Оставить комментарий</h2>
         <div class="commentsInput">
-          <!-- <form>
-            <div>
-              <label for="comment-name">Имя</label>
-              <input type="text" id="comment-name" placeholder="Имя" max="15">
-            </div>
-            <div>
-              <label for="comment-body">Комментарий</label>
-              <textarea name="comment" id="comment-body" cols="60" rows="5"></textarea>
-            </div>
-            <input type="submit" id="comment-add" value="Опубликовать">
 
-            </div>
-
-          </form> -->
-          <form>
+          <form > 
 
             <div class="block-name">
               <label for="comment-name">Имя:</label>
-              <input type="email"  class="comment-name"  placeholder="Enter your name" >
+              <input type="text"  class="comment-name"  placeholder="Enter your name" required ><span class="falseName" ></span>
             </div>
 
             <div class="block-body">
               <label for="comment-body">Комментарий:</label>
-              <textarea type="password"  class="comment-body" placeholder="comment" required ></textarea>
+              <textarea type="password"  class="comment-body" placeholder="comment" required ></textarea><span class="falseBody"></span>
             </div>
 
             <div class="block-add">
@@ -181,12 +167,11 @@
         <a href="tel:+38(098)7866642" class="tel"> +38(098)786-66-42</a>
       </div>
       <div class="footer-social">
-        <div><a href="#"> <img src='/images/icon_Instagram.png'> </a> </div>
-        <div><a href="#"><img src='/images/icon_Facebook.png'></a> </div>
-        <div><a href="#"><img src='/images/icon_YouTube.png'></a> </div>
-        <div><a href="#"><img src='/images/icon_Twitt.png'></a> </div>
-        <div><a href="#"><img src='/images/icon_Linked (1).png'></a> </div>
-      
+        <div><a href="https://www.instagram.com/andrey_tmk/" target = 'blank'> <img src='/images/icon_Instagram.png'> </a> </div>
+        <div><a  href="https://www.facebook.com/profile.php?id=100009540593812&ref=bookmarks " target="blank"><img src='/images/icon_Facebook.png'></a> </div>
+        <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png'></a> </div>
+        <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png'></a> </div>
+        <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked (1).png'></a> </div>
       </div>
       <div class="footer-author">
         <h6>Andrii Tymko  2019</h6>
@@ -196,9 +181,6 @@
 
 <script src="/scripts/search.js"></script>
 <script src="/scripts/blog.js"></script>
-
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> -->
-
 <script src="/scripts/main.js"></script>
 </body>
 </html>
