--- a/pages/service-love.html
+++ b/pages/service-love.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="/styles/main.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 </head>
 <body>
@@ -166,11 +165,11 @@
         <a href="tel:+38(098)7866642" class="tel"> +38(098)786-66-42</a>
       </div>
       <div class="footer-social">
-        <div><a href="#"> <img src='/images/icon_Instagram.png'> </a> </div>
-        <div><a href="#"><img src='/images/icon_Facebook.png'></a> </div>
-        <div><a href="#"><img src='/images/icon_YouTube.png'></a> </div>
-        <div><a href="#"><img src='/images/icon_Twitt.png'></a> </div>
-        <div><a href="#"><img src='/images/icon_Linked (1).png'></a> </div>
+        <div><a href="https://www.instagram.com/andrey_tmk/" target = 'blank'> <img src='/images/icon_Instagram.png'> </a> </div>
+        <div><a  href="https://www.facebook.com/profile.php?id=100009540593812&ref=bookmarks " target="blank"><img src='/images/icon_Facebook.png'></a> </div>
+        <div><a href="https://www.linkedin.com/" target="blank"><img src='/images/icon_YouTube.png'></a> </div>
+        <div><a href="https://twitter.com/?lang=ru" target="blank"><img src='/images/icon_Twitt.png'></a> </div>
+        <div><a href="https://www.youtube.com/" target="blank"><img src='/images/icon_Linked (1).png'></a> </div>
       
       </div>
       <div class="footer-author">
@@ -181,9 +180,6 @@
 
 
 <script src="scripts/search.js"></script>
-
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script> -->
-
 <script src="scripts/main.js"></script>
 </body>
 </html>
